Bug 1831969 - Fix regression caused by Bug 1805186. Syntax error on preview response. r=mkmelin

Error caused connection to drop after new message arrival which can cause the reported problem:
Windows taskbar notification not properly updated.
But there may be other issues causing this too, but this one is probably the main one.

Differential Revision: https://phabricator.services.mozilla.com/D178144

Depends on D178104